--- a/templates/home.html
+++ b/templates/home.html
@@ -31,10 +31,7 @@
         <td>{{employee.salary}}</td>
         <td>{{ employee.commission }}</td>
         <td>{{ employee.manager_id }}</td>
-        <td>{{ employee.department_id }}</td>
-
-        <!-- <form action="/home" , method="POST" target=""> -->
-
+        <td>{{ employee.department_id }}</td>   
         <td>
           <button
             type="button"
@@ -45,10 +42,9 @@
             Edit
           </button>
         </td>
-        <!-- Modal -->
-
-        <!-- </form> -->
       </tr>
+
+      <!-- Modal -->
       <div
         class="modal fade"
         id="edit"
@@ -74,7 +70,7 @@
               <form action="/home", method="POST">
                 <div class="container">
                 <div class="form-group row">
-                  <label for="id" class="col-sm-3 col-form-label"
+                  <label for="id" class="col-sm-4 col-form-label"
                     >Employee ID</label
                   >
                   <div class="col-sm-3">
@@ -90,7 +86,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="staticFName" class="col-sm-3 col-form-label"
+                  <label for="staticFName" class="col-sm-4 col-form-label"
                     >First Name</label
                   >
                   <div class="col-sm-3">
@@ -104,7 +100,7 @@
                   </div>
                 </div>
                 <div class="form-group row">
-                  <label for="staticLName" class="col-sm-3 col-form-label"
+                  <label for="staticLName" class="col-sm-4 col-form-label"
                     >Last Name</label
                   >
                   <div class="col-sm-3">
@@ -119,7 +115,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="email" class="col-sm-3 col-form-label"
+                  <label for="email" class="col-sm-4 col-form-label"
                     >Email</label
                   >
                   <div class="col-sm-3">
@@ -135,7 +131,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="phone" class="col-sm-3 col-form-label"
+                  <label for="phone" class="col-sm-4 col-form-label"
                     >Phone</label
                   >
                   <div class="col-sm-4">
@@ -151,7 +147,7 @@
 
                
                 <div class="form-group row">
-                  <label for="staticHDate" class="col-sm-3 col-form-label"
+                  <label for="staticHDate" class="col-sm-4 col-form-label"
                     >Hire Date</label
                   >
                   <div class="col-sm-3">
@@ -166,7 +162,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="staticJobId" class="col-sm-3 col-form-label"
+                  <label for="staticJobId" class="col-sm-4 col-form-label"
                     >Job ID</label
                   >
                   <div class="col-sm-3">
@@ -181,7 +177,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="salary" class="col-sm-3 col-form-label"
+                  <label for="salary" class="col-sm-4 col-form-label"
                     >Salary</label
                   >
                   <div class="col-sm-3">
@@ -196,7 +192,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="staticComm" class="col-sm-3 col-form-label"
+                  <label for="staticComm" class="col-sm-4 col-form-label"
                     >Commission</label
                   >
                   <div class="col-sm-3">
@@ -211,7 +207,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label for="staticMID" class="col-sm-3 col-form-label"
+                  <label for="staticMID" class="col-sm-4 col-form-label"
                     >Manager ID</label
                   >
                   <div class="col-sm-3">
@@ -225,8 +221,8 @@
                   </div>
                 </div>
 
-                <div class="form-group row">
-                  <label for="staticDID" class="col-sm-3 col-form-label"
+                <div class="form-group row mb-3">
+                  <label for="staticDID" class="col-sm-4 col-form-label"
                     >Department ID</label
                   >
                   <div class="col-sm-3">
