--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,6 +47,10 @@
             <div class="navbar-nav me-auto">
               <a class="nav-item nav-link" href="/">Home</a>
               <a class="nav-item nav-link" href="/newemployee">Hire Employee</a>
+              <a class="nav-item nav-link" href="/identifyjob">Jobs</a>
+              <a class="nav-item nav-link" href="/updatejob"
+                >Update Job Description</a
+              >
             </div>
           </div>
         </div>
